--- a/tim gia tri.html
+++ b/tim gia tri.html
@@ -7,13 +7,13 @@
 <body>
 <script>
     let value = prompt("Enter a number :");
-    let numbers = [-3,5,1,3,2,10];
-    for (let i = 0 ; i < numbers.length ; i++) {
-        if( value === numbers[i] ) {
-            alert("Value" + numbers[i] + "fond at" + i);
+
+    let numbers = [-3, 5, 1, 3, 2, 10];
+    for (let i = 0; i < numbers.length; i++) {
+        if (value == numbers[i]) {
+            alert("Value" + numbers[i] + " fond at" + i);
         }
     }
-
 </script>
 </body>
 </html>
